--- a/Controller/src/main/resources/messages_en.properties
+++ b/Controller/src/main/resources/messages_en.properties
@@ -406,3 +406,4 @@ orders.acceptsaveerror=Error while saving order
 transaction.providerror=Failed to provide transaction
 order.notenoughreservedmoneyforcreator=Not enough reserved money for creator when accept the order
 order.notenoughmoneyforacceptor=Not enough available money for acceptor when accept the order
+order.createwalleterror=Error while creating wallet required to perform the operation for user {0}
