--- a/Controller/src/main/resources/messages_ru.properties
+++ b/Controller/src/main/resources/messages_ru.properties
@@ -447,3 +447,4 @@ orders.acceptsaveerror=Ошибка при сохранении ордера
 transaction.providerror=Ошибка при создании транзакции
 order.notenoughreservedmoneyforcreator=Не достаточно средств на резерве создателя ордера
 order.notenoughmoneyforacceptor=Не достаточно средств на счету для акцепта ордера
+order.createwalleterror=Ошибка при создании кошелька, необходимого для совершения операции для пользователя {0}
