redone order and wallets blocks, add transaction for all operations on wallets

--- a/Controller/src/main/resources/messages_en.properties
+++ b/Controller/src/main/resources/messages_en.properties
@@ -407,3 +407,8 @@ transaction.providerror=Failed to provide transaction
 order.notenoughreservedmoneyforcreator=Not enough reserved money for creator when accept the order
 order.notenoughmoneyforacceptor=Not enough available money for acceptor when accept the order
 order.createwalleterror=Error while creating wallet required to perform the operation for user {0}
+order.createerror=Error while creating order: {0}
+order.alreadyacceptederror=The order is accepted already
+order.recreateerror=The form to create the order has been submited already. Wait for result
+order.redeleteerror=The form to delete the order has been submited already. Wait for result
+order.cannotcancel=The order can not be deleted
