--- a/Controller/src/main/resources/messages_en.properties
+++ b/Controller/src/main/resources/messages_en.properties
@@ -4,6 +4,16 @@ acceptorder.title=accept order
 acceptordersuccess.link=see
 acceptordersuccess.text=You have successfully accepted order
 acceptordersuccess.title=order was accepted!
+admin.refSubmitEditCommonRoot = Edit
+admin.referral = Referral system
+admin.referralLevel = Level
+admin.referralPercent = Percent
+admin.successfulRefLevelEdit = Percent successfully changed
+admin.refCommonRoot = Default common referral root
+admin.refAbsentCommonRoot = Absent
+admin.refCommonRootCurrent = Current user {0}
+admin.failureRefLevelEdit = An error has occurred! Try again later
+admin.refPercentExceedMaximum = The total amount of percents at all levels should not exceed 100%
 admin.withdrawRequests=Withdrawal requests
 admin.addUser=Add user
 admin.admins=Administrators
@@ -294,6 +304,8 @@ usermenu.mywallets=my wallets
 usermenu.orders=orders
 usermenu.outputCredits=output credits
 usermenu.settings=settings
+usermenu.referral=Referral
+refferal.generate = Generate referral ref
 validation.emailexists=this e-mail already exists!
 validation.emailincorrect=incorrect e-mail!
 validation.emailrequired=email field shall be filled in
