--- a/Controller/src/main/resources/messages_ru.properties
+++ b/Controller/src/main/resources/messages_ru.properties
@@ -29,6 +29,28 @@ admin.title=Администрирование
 admin.user=Пользователь
 admin.users=Пользователи
 #not translated
+admin.refSubmitEditCommonRoot = Изменить
+#not translated
+admin.refCommonRoot = Реферальный предок по-умолчанию
+#not translated
+admin.refAbsentCommonRoot = Отсутствует
+#not translated
+admin.refCommonRootCurrent = Текущий пользователь {0}
+#not translated
+admin.refPercentExceedMaximum = Ошибка! Суммарное количество процентов на всех уровнях не должно превышать 100%
+#not translated
+admin.referralLevel = Уровень
+#not translated
+admin.referralPercent = Процент
+#not translated
+admin.successfulRefLevelEdit = Процент успешно изменен
+#not translated
+admin.failureRefLevelEdit = Произошла ошибка! Попробуйте позже
+#not translated
+admin.referralCurrentLevels = Текущие уровни реферальной системы
+#not translated
+admin.referral = Реферальная система
+#not translated
 admin.withdrawRequests=Заявки на вывод
 #not translated
 withdrawal.requestDatetime=Дата создания
@@ -323,6 +345,8 @@ usermenu.mywallets=Мои счета
 usermenu.orders=Ордера
 usermenu.outputCredits=Вывод средств
 usermenu.settings=Настройки
+usermenu.referral=Реферальная система
+refferal.generate = Сгенерировать реферальную ссылку
 validation.emailexists=Такой e-mail уже существует!
 validation.emailincorrect=Неправильный электронный адрес!
 validation.emailrequired=Поле email обязательно для заполнения!
