add news block + some fix

--- a/Controller/src/main/resources/messages_en.properties
+++ b/Controller/src/main/resources/messages_en.properties
@@ -384,8 +384,8 @@ admin.newipproved=You have successfully confirmed IP-address
 admin.newipnotproved=Link to IP-address confirmation is not valid (expired)
 admin.usersWallet=Users wallets summary
 wallets.amount=number of accounts
-wallets.abalance=active balance
-wallets.rbalance=reserved
+wallets.abalance=Active balance
+wallets.rbalance=Reserved
 wallets.average=on average per one account
 wallets.download=Download the data
 orders.volume=Volume
@@ -429,3 +429,19 @@ order.alreadyacceptederror=The order is accepted already
 order.recreateerror=The form to create the order has been submited already. Wait for result
 order.redeleteerror=The form to delete the order has been submited already. Wait for result
 order.cannotcancel=The order can not be deleted
+wallets.balance=Balance
+news.more=More...
+news.absent=News in English is missing
+news.locale=Language news
+news.date=Date news
+news.datetimeplaceholder=yyyy-mm-dd
+news.errordatetime=Format: yyyy-mm-dd
+news.resource=The directory to store
+news.resourceerror=
+news.addvariant=Add
+news.nofilesforloading=Not specified the file to upload
+news.successload=The file uploaded successfully
+news.errorload=Error while the file loading
+news.errorcreate=Error while the news save in DB
+news.resourcepatherror=The field resource is too short: min length is 3
+news.dateerror=The date is incorrect
