--- a/Controller/src/main/resources/messages_ru.properties
+++ b/Controller/src/main/resources/messages_ru.properties
@@ -446,7 +446,7 @@ admin.newipproved=Вы успешно подтвердили IP-адрес
 admin.newipnotproved=Ссылка на подтверждение IP-адреса не действительна (просрочена).
 admin.usersWallet=Свод по счетам пользователей
 wallets.amount=Количество счетов
-wallets.abalance=Баланс
+wallets.abalance=Активный баланс
 wallets.rbalance=Зарезервировано
 wallets.average=В среднем на счет
 wallets.download=Выгрузить данные
@@ -491,3 +491,19 @@ order.alreadyacceptederror=Ордер уже акцептован
 order.recreateerror=Форма на создание ордера уже отправлена. Дождитесь результата
 order.redeleteerror=Форма на удаление ордера уже отправлена. Дождитесь результата
 order.cannotcancel=Ордер не может быть удален
+wallets.balance=Баланс
+news.more=Подробнее...
+news.absent=Новость на Русском языке отсутствует
+news.locale=Язык новости
+news.date=Дата новости
+news.datetimeplaceholder=гггг-мм-дд
+news.errordatetime=Формат: гггг-мм-дд
+news.resource=Каталог для хранения
+news.resourceerror
+news.addvariant=Добавить
+news.nofilesforloading=Не указан файл для загрузки
+news.successload=Файл загружен
+news.errorload=Ошибка при загрузке файла
+news.errorcreate=Ошибка при записи новости в БД
+news.resourcepatherror=Поле resource слишком короткое: min длина 3 символа
+news.dateerror=Ошибка в дате
