--- a/Controller/src/main/resources/messages_en.properties
+++ b/Controller/src/main/resources/messages_en.properties
@@ -8,7 +8,9 @@ admin.refSubmitEditCommonRoot = Edit
 admin.referral = Referral system
 admin.referralLevel = Level
 admin.referralPercent = Percent
+admin.referralLevelEdit = Change referral level
 admin.successfulRefLevelEdit = Percent successfully changed
+admin.referralLevels = Levels
 admin.refCommonRoot = Default common referral root
 admin.refAbsentCommonRoot = Absent
 admin.refCommonRootCurrent = Current user {0}
@@ -290,6 +292,9 @@ transaction.operationTypeOUTPUT=output
 transaction.perfectmoney=Perfect.Money
 transaction.walletId=wallet number
 transaction.yandexmoney=Yandex.Money
+transaction.operationTypeREFERRAL=Referral system
+transaction.referralLevel = Level (percent)
+transactions.referralTransactionTitle = Referral payments
 transaction.status=Status
 transaction.provided=Confirmed
 transaction.notProvided=Waiting for confirmation
