Small fix for [PROGRAM-130]

--- a/Controller/src/main/resources/messages_en.properties
+++ b/Controller/src/main/resources/messages_en.properties
@@ -324,6 +324,7 @@ validation.passwordmismatch=passwords do not match!
 validation.passwordrequired=enter password!
 validation.phoneincorrect=Enter the phone number in "380671234567" format !
 dashboard.otherpairs=Other pairs
+transaction.initiatorEmail = Email
 merchants.currencyforoutput = output currency
 dashboard.orderPrice=Price
 register.capchaincorrect=A problem occurred while checking the capcha. Try again, please
