Temporary Blockchain disable and updates for Referral

--- a/Controller/src/main/resources/messages_en.properties
+++ b/Controller/src/main/resources/messages_en.properties
@@ -343,6 +343,7 @@ about_us.telephone = Tel.: {0}
 #not translated
 about_us.email= Email: {0}
 
+register.sponsor = Sponsor
 
 admin.balance=Balance
 admin.transactions=Transactions
