--- a/Controller/src/main/resources/messages_ru.properties
+++ b/Controller/src/main/resources/messages_ru.properties
@@ -296,6 +296,8 @@ register.sendletter=Вам выслано письмо для подтвержд
 register.submit=Зарегистрироваться
 register.successfullyproved=Вы успешно подтвердили свой электронный адрес. Теперь вы можете войти.
 register.title=Регистрация нового пользователя
+#not translated
+register.sponsor = Спонсор
 submitorder.buy=Покупаю
 submitorder.cancell=Отменить
 submitorder.change=Изменить
@@ -346,6 +348,8 @@ transaction.initiatorEmail = Email
 transaction.referralLevel = Уровень (процент)
 #not translated
 transactions.referralTransactionTitle = Реферальные выплаты
+#not translated
+
 transactions.absent=История операций пуста
 transactions.title=История операций
 usermenu.history=История операций
