Temporary disable referral && fix missed locales

--- a/Controller/src/main/resources/messages_en.properties
+++ b/Controller/src/main/resources/messages_en.properties
@@ -284,6 +284,7 @@ transaction.datetime=Transaction date
 transaction.exrates=exrates.me
 transaction.id=Id transactions
 transaction.merchant=Payment system
+transaction.operationTypeWALLET_INNER_TRANSFER = Wallet inner transfer
 transaction.operationType=Transaction type
 transaction.operationTypeAcceptOrder=Accept order
 transaction.operationTypeCreateOrder=Create Order
