--- a/Controller/src/main/resources/messages_ru.properties
+++ b/Controller/src/main/resources/messages_ru.properties
@@ -296,6 +296,7 @@ register.sendletter=Вам выслано письмо для подтвержд
 register.submit=Зарегистрироваться
 register.successfullyproved=Вы успешно подтвердили свой электронный адрес. Теперь вы можете войти.
 register.title=Регистрация нового пользователя
+transaction.operationTypeWALLET_INNER_TRANSFER = Внутреннее перемещение средств
 #not translated
 register.sponsor = Спонсор
 submitorder.buy=Покупаю
