--- a/Controller/src/main/resources/messages_en.properties
+++ b/Controller/src/main/resources/messages_en.properties
@@ -437,13 +437,21 @@ news.datetimeplaceholder=yyyy-mm-dd
 news.errordatetime=Format: yyyy-mm-dd
 news.resource=The directory to store
 news.resourceerror=
-news.addvariant=Add
+news.deletenews=Remove news
+news.addnews=Add news
+news.deletevariant=Remove news
+news.add=Add
+news.addvariant=Add/Update
 news.nofilesforloading=Not specified the file to upload
 news.successload=The file uploaded successfully
 news.errorload=Error while the file loading
 news.errorcreate=Error while the news save in DB
 news.resourcepatherror=The field resource is too short: min length is 3
 news.dateerror=The date is incorrect
+news.news=The news
+news.variant=Variant the news
+news.successdelete=The news deleted successfully
+news.errordelete=Error while the news deleting
 dashboard.trading=Trading
 dashboard.qr=To enter via QR code
 mywallets.currency=Currency
