--- a/Controller/src/main/resources/messages_ru.properties
+++ b/Controller/src/main/resources/messages_ru.properties
@@ -501,13 +501,21 @@ news.datetimeplaceholder=гггг-мм-дд
 news.errordatetime=Формат: гггг-мм-дд
 news.resource=Каталог для хранения
 news.resourceerror
-news.addvariant=Добавить
+news.deletenews=Удалить новость
+news.add=Добавить
+news.addnews=Добавить новость
+news.deletevariant=Удалить
+news.addvariant=Добавить/Обновить
 news.nofilesforloading=Не указан файл для загрузки
 news.successload=Файл загружен
 news.errorload=Ошибка при загрузке файла
 news.errorcreate=Ошибка при записи новости в БД
 news.resourcepatherror=Поле resource слишком короткое: min длина 3 символа
 news.dateerror=Ошибка в дате
+news.news=Новость
+news.variant=Вариант новости
+news.successdelete=Новость удалена
+news.errordelete=Ошибка при удалении новости
 dashboard.trading=Торги
 dashboard.qr=Вход через QR код
 mywallets.currency=Валюта
