--- a/Controller/src/main/resources/messages_en.properties
+++ b/Controller/src/main/resources/messages_en.properties
@@ -491,3 +491,4 @@ mywallets.balance=Available balance
 dashboard.price=Rate for
 usermenu.myorders=History
 usermenu.mywallets=Balance
+chat.invalidSymbols = The message could not be sent because it contains illegal characters or is longer than 256 characters.
