--- a/Controller/src/main/resources/messages_ru.properties
+++ b/Controller/src/main/resources/messages_ru.properties
@@ -555,3 +555,5 @@ mywallets.balance=Доступный баланс
 dashboard.price=Цена за
 usermenu.myorders=История
 usermenu.mywallets=Баланс
+#not translated
+chat.invalidSymbols = Сообщение не может быть отправлено, так как содержит запрещенные символы либо длиннее 256 символов.
