Balance table tuned and pagination for History and Orders pages

--- a/Controller/src/main/resources/messages_en.properties
+++ b/Controller/src/main/resources/messages_en.properties
@@ -492,6 +492,8 @@ orders.type=Type the order
 orders.currencypair=Currency pair
 order.lockerror=The selected list the orders may not be grabbed for acceptance
 order.acceptsuccess=The {0} orders have been accepted successfully
+table.backward=Previous
+table.forward=Next
 #renamed
 mywallets.title=YOUR BALANCE
 mywallets.abalance=Balance
