--- a/Controller/src/main/resources/messages_ru.properties
+++ b/Controller/src/main/resources/messages_ru.properties
@@ -556,6 +556,8 @@ orders.type=Тип ордера
 orders.currencypair=Валютная пара
 order.lockerror=Не удается захватить выбранный список ордеров для акцепта
 order.acceptsuccess={0} ордера были успешно приняты
+table.backward=Предыдущая
+table.forward=Следующая
 #renamed
 mywallets.title=ВАШ БАЛАНС
 mywallets.abalance=Баланс
