--- a/Controller/src/main/resources/messages_cn.properties
+++ b/Controller/src/main/resources/messages_cn.properties
@@ -515,7 +515,8 @@ dashboard.onlinechatenter = Enter message
 order.cannotcancel = The order can not be deleted
 register.sponsor = Sponsor
 transaction.referralLevel = Level (percent)
-refferal.generate = Generate referral ref
+refferal.generate = Generate
+refferal.copy = Copy
 admin.referralLevels = Levels
 admin.successfulRefLevelEdit = Percent successfully changed
 admin.referralLevelEdit = Change referral level
@@ -529,12 +530,29 @@ admin.refAbsentCommonRoot = Absent
 admin.refCommonRoot = Default common referral root
 transaction.initiatorEmail = Email
 transaction.operationTypeREFERRAL = Referral system
-usermenu.referral = Referral
+usermenu.referral=My referral reference
 transactions.referralTransactionTitle = Referral payments
 admin.referralPercent = Percent
-#new
-history.title=HISTORY
-history.orders=My orders
-history.inputoutput=Input/output
-#renamed
-dashboard.price=Rate for
+chat.invalidSymbols = The message could not be sent because it contains illegal characters or is longer than 256 characters.
+table.backward = Previous
+news.variant = Variant the news
+orders.currencypair = Currency pair
+news.addnews = Add news
+history.title = HISTORY
+acceptorder.submit = accept
+orders.amount = Amount
+history.inputoutput = Input/output
+news.add = Add
+dashboard.price = Rate for
+table.forward = Next
+orders.type = Type the order
+history.orders = My orders
+order.acceptsuccess = The {0} orders have been accepted successfully
+news.deletevariant = Remove news
+news.successdelete = The news deleted successfully
+order.lockerror = The selected list the orders may not be grabbed for acceptance
+news.errordelete = Error while the news deleting
+news.news = The news
+news.deletenews = Remove news
+myreferral.title=My referral commissions
+history.referral=Referral commissions
