--- a/Controller/src/main/resources/messages_en.properties
+++ b/Controller/src/main/resources/messages_en.properties
@@ -305,8 +305,9 @@ usermenu.inputCredits=input credits
 usermenu.orders=Orders
 usermenu.outputCredits=output credits
 usermenu.settings=settings
-usermenu.referral=Referral
-refferal.generate = Generate referral ref
+usermenu.referral=My referral reference
+refferal.generate = Generate
+refferal.copy = Copy
 validation.emailexists=this e-mail already exists!
 validation.emailincorrect=incorrect e-mail!
 validation.emailrequired=email field shall be filled in
@@ -494,6 +495,8 @@ order.lockerror=The selected list the orders may not be grabbed for acceptance
 order.acceptsuccess=The {0} orders have been accepted successfully
 table.backward=Previous
 table.forward=Next
+myreferral.title=My referral commissions
+history.referral=Referral commissions
 #renamed
 mywallets.title=YOUR BALANCE
 mywallets.abalance=Balance
