--- a/Controller/src/main/resources/messages_ru.properties
+++ b/Controller/src/main/resources/messages_ru.properties
@@ -289,7 +289,7 @@ register.nickname=Nickname*
 register.password=Пароль*
 register.readrules=Ознакомлен(-а) с правилами регистрации*
 register.repeatpassword=Повторите пароль*
-register.sendletter=Вам выслано письмо для подтверждения регистрации на адрес
+register.sendletter=Вам выслано письмо для подтверждения регистрации
 register.submit=Зарегистрироваться
 register.successfullyproved=Вы успешно подтвердили свой электронный адрес. Теперь вы можете войти.
 register.title=Регистрация нового пользователя
@@ -356,9 +356,10 @@ usermenu.orders=Ордера
 usermenu.outputCredits=Вывод средств
 usermenu.settings=Настройки
 #not tranlsated
-usermenu.referral=Реферальная система
+usermenu.referral=Моя реферальная ссылка
 #not tranlsated
-refferal.generate = Сгенерировать реферальную ссылку
+refferal.generate = Генерировать
+refferal.copy = Копировать
 #not tranlsated
 admin.referralLevelEdit = Изменить реферальный уровень
 validation.emailexists=Такой e-mail уже существует!
@@ -558,6 +559,8 @@ order.lockerror=Не удается захватить выбранный спи
 order.acceptsuccess={0} ордера были успешно приняты
 table.backward=Предыдущая
 table.forward=Следующая
+myreferral.title=Мои реферальные начисления
+history.referral=Реферальные начисления
 #renamed
 mywallets.title=ВАШ БАЛАНС
 mywallets.abalance=Баланс
