added wallet history

--- a/Controller/src/main/resources/messages_en.properties
+++ b/Controller/src/main/resources/messages_en.properties
@@ -497,6 +497,7 @@ table.backward=Previous
 table.forward=Next
 myreferral.title=My referral commissions
 history.referral=Referral commissions
+mystatement.title=Account statement
 #renamed
 mywallets.title=YOUR BALANCE
 mywallets.abalance=Balance
@@ -505,3 +506,26 @@ dashboard.price=Rate for
 usermenu.myorders=History
 usermenu.mywallets=Balance
 chat.invalidSymbols = The message could not be sent because it contains illegal characters or is longer than 256 characters.
+operationtype.INPUT=INPUT
+operationtype.OUTPUT=OUTPUT
+operationtype.SELL=SELL
+operationtype.BUY=BUY
+operationtype.WALLET_INNER_TRANSFER=INNER
+operationtype.REFERRAL=REFERRAL
+operationtype.STORNO=STORNO
+transactionsourcetype.ORDER = ORDER
+transactionsourcetype.MERCHANT = IN/OUT
+transactionsourcetype.REFERRAL = REFERRAL
+transactionsourcetype.ACCRUAL = ACCRUAL
+mystatement.activebefore=Beg.active
+mystatement.reservedbefore=Beg.reserve
+mystatement.activeafter=End active
+mystatement.reservedafter=End reserve
+mystatement.amount=Amount
+mystatement.commissionamount=incl.Commission
+mystatement.operationtype=Type
+mystatement.sourcetype=Source
+mystatement.datetime=Date
+orderinfo.info=Data about the order
+orderinfo.currencypair=Currency Pair
+orderinfo.ok=Ok
