--- a/Controller/src/main/resources/messages_ru.properties
+++ b/Controller/src/main/resources/messages_ru.properties
@@ -570,3 +570,27 @@ usermenu.myorders=История
 usermenu.mywallets=Баланс
 #not translated
 chat.invalidSymbols = Сообщение не может быть отправлено, так как содержит запрещенные символы либо длиннее 256 символов.
+operationtype.INPUT=ПРИХОД
+operationtype.OUTPUT=РАСХОД
+operationtype.SELL=ПРОДАЖА
+operationtype.BUY=ПОКУПКА
+operationtype.WALLET_INNER_TRANSFER=ВНУТР
+operationtype.REFERRAL=РЕФЕРРАЛ
+operationtype.STORNO=СТОРНО
+transactionsourcetype.ORDER=ОРДЕР
+transactionsourcetype.MERCHANT=ВВОД/ВЫВОД
+transactionsourcetype.REFERRAL=РЕФЕРРАЛ
+transactionsourcetype.ACCRUAL=НАЧИСЛЕНИЕ
+mystatement.title=Account statement
+mystatement.activebefore=Нач.актив
+mystatement.reservedbefore=Нач.резерв
+mystatement.activeafter=Кон.актив
+mystatement.reservedafter=Кон.резерв
+mystatement.amount=Сумма
+mystatement.commissionamount=в т.ч.Комисия
+mystatement.operationtype=Тип
+mystatement.sourcetype=Источник
+mystatement.datetime=Дата транзакции
+orderinfo.info=Данные ордера
+orderinfo.currencypair=Валютная пара
+orderinfo.ok=Ok
