--- a/Controller/src/main/resources/messages_cn.properties
+++ b/Controller/src/main/resources/messages_cn.properties
@@ -556,3 +556,27 @@ news.news = The news
 news.deletenews = Remove news
 myreferral.title=My referral commissions
 history.referral=Referral commissions
+mystatement.title=Account statement
+operationtype.INPUT=INPUT
+operationtype.OUTPUT=OUTPUT
+operationtype.SELL=SELL
+operationtype.BUY=BUY
+operationtype.WALLET_INNER_TRANSFER=INNER
+operationtype.REFERRAL=REFERRAL
+operationtype.STORNO=STORNO
+transactionsourcetype.ORDER = ORDER
+transactionsourcetype.MERCHANT = IN/OUT
+transactionsourcetype.REFERRAL = REFERRAL
+transactionsourcetype.ACCRUAL = ACCRUAL
+mystatement.activebefore=Beg.active
+mystatement.reservedbefore=Beg.reserve
+mystatement.activeafter=End active
+mystatement.reservedafter=End reserve
+mystatement.amount=Amount
+mystatement.commissionamount=incl.Commission
+mystatement.operationtype=Type
+mystatement.sourcetype=Source
+mystatement.datetime=Date
+orderinfo.info=Data about the order
+orderinfo.currencypair=Currency Pair
+orderinfo.ok=Ok
