--- a/Controller/src/main/resources/messages_cn.properties
+++ b/Controller/src/main/resources/messages_cn.properties
@@ -321,7 +321,7 @@ admin.successUploadFiles = 文件下载成功
 admin.email = Email
 orders.currencysale = 出售
 dashboard.PressAboutUs = 报纸关于我们
-about_us.contacts = Наши контакты:我们信息: 
+about_us.contacts = 我们信息: 
 dashboard.forgotPassword = 忘记了密码？ 
 orderinfo.searcherror = 单据找不到了
 validation.passwordincorrect = 密码必须包含字母8〜20个字符的总长度（仅限于拉丁文）和数字！
@@ -580,3 +580,4 @@ mystatement.datetime=Date
 orderinfo.info=Data about the order
 orderinfo.currencypair=Currency Pair
 orderinfo.ok=Ok
+admin.changePasswordTitle=Changing the passwords
