--- a/Controller/src/main/resources/messages_en.properties
+++ b/Controller/src/main/resources/messages_en.properties
@@ -21,7 +21,7 @@ admin.addUser=Add user
 admin.admins=Administrators
 admin.cancel=Cancel
 admin.changeFinPassword=Change financial password
-admin.changePassword=Change password
+admin.changePassword=Change main password
 admin.changePasswordSendEmail=To confirm the operation, check your e-mail and follow the instructions in received message
 admin.companyWallet=Company account
 admin.confirmpassword=Confirm password
@@ -129,7 +129,7 @@ emailsubmitResetPassword.subject=Confirmation exrates.me password recovery
 emailsubmitResetPassword.text=You requested exrates.me password recovery. To confirm click here
 emailsubmitregister.subject=Registration confirmation on exrates.me
 emailsubmitregister.text=You have registered on exrates.me. To confirm registration, please click here
-login.blocked=Account is blocked!
+login.blocked=Account is blocked! Check your email - perhaps you haven't confirmed your previous action
 login.email=Email
 login.errorLogin=Login error!
 login.notFound=Wrong password or login!
@@ -529,3 +529,5 @@ mystatement.datetime=Date
 orderinfo.info=Data about the order
 orderinfo.currencypair=Currency Pair
 orderinfo.ok=Ok
+admin.changePasswordTitle=Changing the passwords
+login.blocked=Account is blocked! Check your email - perhaps you haven't confirmed your previous action
