--- a/Controller/src/main/resources/messages_th.properties
+++ b/Controller/src/main/resources/messages_th.properties
@@ -584,3 +584,4 @@ mystatement.datetime=Date
 orderinfo.info=Data about the order
 orderinfo.currencypair=Currency Pair
 orderinfo.ok=Ok
+admin.changePasswordTitle=Changing the passwords
