--- a/Controller/src/main/resources/messages_ru.properties
+++ b/Controller/src/main/resources/messages_ru.properties
@@ -594,3 +594,4 @@ orderinfo.info=Данные ордера
 orderinfo.currencypair=Валютная пара
 orderinfo.ok=Ok
 admin.changePasswordTitle=Смена паролей
+login.email=Email
