add merchant images

--- a/Controller/src/main/resources/messages_en.properties
+++ b/Controller/src/main/resources/messages_en.properties
@@ -186,6 +186,7 @@ merchants.successfulBalanceDeposit=You have successfully deposited {0}. Commissi
 merchants.successfulBalanceWithdraw=you have successfully withdrawn in the amount: {0}
 merchants.successfulMoneyInput=Thank you. money was input in your wallet.
 merchants.depositNotification.body = Please pay {0} on the wallet {1}
+merchants.depositNotificationWithCurrency.body = Please pay {0} {1} on the checking account {2}
 merchants.depositNotification.header = Exrates payment notification
 merchants.depositNotificationWithFee = Please pay %1s on the wallet %1s (Including EDR Coin commission)
 merchants.sum=Sum
@@ -193,6 +194,7 @@ merchants.sumToPay=Sum to pay
 merchants.withdraw=Withdraw
 merchants.pendingEnrollment=The transfer of money will will occur within next 48 hours
 merchants.waiting=Waiting
+merchants.next=Next
 myorders.amountbuy=commission free amount
 myorders.amountsell=sum
 myorders.amountwithcommission=amount including commission
@@ -297,6 +299,9 @@ transaction.operationTypeREFERRAL=Referral system
 transaction.referralLevel = Level (percent)
 transactions.referralTransactionTitle = Referral payments
 transaction.status=Status
+transaction.titleInvoice=Invoices for confirmation
+transaction.сonfirmation=Сonfirmation
+transaction.accept=accept
 transaction.provided=Confirmed
 transaction.notProvided=Waiting for confirmation
 transaction.confirmations=Waiting for confirmations: {0}/{1}
