TESTING-106 TESTING-104 TESTING-119 TESTING-108 + added all and my deals buttons

--- a/Controller/src/main/resources/messages_cn.properties
+++ b/Controller/src/main/resources/messages_cn.properties
@@ -465,7 +465,6 @@ mywallets.reservedonorders = Reserved on orders
 news.locale = Language news
 dashboard.onlinechat = ONLINE CHAT
 order.alreadyacceptederror = The order is accepted already
-dashboard.transactions = TRANSACTIONS
 orders = buy orders
 wallets.balance = Balance
 ordersearch.errordatetime = Format: yyyy-mm-dd HH:mm:ss
@@ -495,7 +494,8 @@ myorders.deal = Deals
 order.createerror = Error while creating order: {0}
 orders.buyorders = Orders for buy
 dashboard.onlinechatsend = Send
-dashboard.dealshistory = HISTORY OF DEALS
+dashboard.dealshistory=ALL TRADES
+dashboard.transactions=MY TRADES
 mywallets.amount = Amount
 dashboard.time = Time
 mywallets.onconfirmation = On confirmation
@@ -581,3 +581,4 @@ orderinfo.info=Data about the order
 orderinfo.currencypair=Currency Pair
 orderinfo.ok=Ok
 admin.changePasswordTitle=Changing the passwords
+currency.search=Search
