--- a/Controller/src/main/resources/messages_ru.properties
+++ b/Controller/src/main/resources/messages_ru.properties
@@ -526,8 +526,8 @@ currency.rate=Текущий курс
 dashboard.onlinechat=ОНЛАЙН ЧАТ
 dashboard.onlinechatsend=Отправить
 dashboard.onlinechatenter=Введите сообщение
-dashboard.dealshistory=ИСТОРИЯ СДЕЛОК
-dashboard.transactions=ТРАНЗАКЦИИ
+dashboard.dealshistory=ВСЕ СДЕЛКИ
+dashboard.transactions=МОИ СДЕЛКИ
 dashboard.time=Время
 dashboard.commission=Комиссия
 dashboard.amountwithcommission=Всего с комиссией
@@ -595,3 +595,4 @@ orderinfo.currencypair=Валютная пара
 orderinfo.ok=Ok
 admin.changePasswordTitle=Смена паролей
 login.email=Email
+currency.search=Поиск
