--- a/Controller/src/main/resources/messages_th.properties
+++ b/Controller/src/main/resources/messages_th.properties
@@ -291,7 +291,8 @@ login.errorLogin = Login error!
 admin.changeFinPassword = Change financial password
 register.capchaincorrect = A problem occurred while checking the capcha. Try again, please
 merchants.modalOutputWallet = Enter your wallet number :
-dashboard.transactions = TRANSACTIONS
+dashboard.dealshistory=ALL TRADES
+dashboard.transactions=MY TRADES
 dashboard.priceEnd = end price:
 admin.successfulDeleteUserFiles = File removed successful
 dashboard.sellCurrency = sell currency
@@ -468,7 +469,6 @@ orderinfo.id = ID
 chart.days = days
 dashboard.onlinechatsend = Send
 order.notenoughmoneyforacceptor = Not enough available money for acceptor when accept the order
-dashboard.dealshistory = HISTORY OF DEALS
 transaction.status = Status
 merchants.modalOutputFinalSum = Amount to be enrolled : __amount __currency
 admin.changePassword = Change password
@@ -585,3 +585,4 @@ orderinfo.info=Data about the order
 orderinfo.currencypair=Currency Pair
 orderinfo.ok=Ok
 admin.changePasswordTitle=Changing the passwords
+currency.search=Search
