--- a/Controller/src/main/resources/messages_en.properties
+++ b/Controller/src/main/resources/messages_en.properties
@@ -463,8 +463,8 @@ currency.rate=Current rate
 dashboard.onlinechat=ONLINE CHAT
 dashboard.onlinechatsend=Send
 dashboard.onlinechatenter=Enter message
-dashboard.dealshistory=HISTORY OF DEALS
-dashboard.transactions=TRANSACTIONS
+dashboard.dealshistory=ALL TRADES
+dashboard.transactions=MY TRADES
 dashboard.time=Time
 dashboard.commission=Commission
 dashboard.amountwithcommission=Total with commission
@@ -530,3 +530,4 @@ orderinfo.info=Data about the order
 orderinfo.currencypair=Currency Pair
 orderinfo.ok=Ok
 admin.changePasswordTitle=Changing the passwords
+currency.search=Search
