TESTING-125 TESTING-130 TESTING-35 TESTING-107

--- a/Controller/src/main/resources/messages_cn.properties
+++ b/Controller/src/main/resources/messages_cn.properties
@@ -504,6 +504,7 @@ news.errordatetime = Format: yyyy-mm-dd
 news.resourcepatherror = The field resource is too short: min length is 3
 transaction.operationTypeWALLET_INNER_TRANSFER = Inner transfer
 currency.pairs = Currency Pairs
+currency.allpairs=All Pairs
 news.errorload = Error while the file loading
 news.addvariant = Add
 merchants.warn = Please pay attention to the amount of money you inputting. It must exactly match the amount that is listed above
