--- a/Controller/src/main/resources/messages_en.properties
+++ b/Controller/src/main/resources/messages_en.properties
@@ -198,11 +198,11 @@ myorders.amountsell=sum
 myorders.amountwithcommission=amount including commission
 myorders.buy=
 myorders.buyorders=Purchase orders
-myorders.commission=Fee
+myorders.commission=Commission
 myorders.create=Create Order
 myorders.currbuy=buy
 myorders.currsell=sell
-myorders.datecreation=created
+myorders.datecreation=Created
 myorders.datefinal=accepted
 myorders.delete=delete
 myorders.deletefailed=The order can not be removed. Contact the administrator of the resource.
@@ -458,6 +458,7 @@ dashboard.qr=To enter via QR code
 mywallets.currency=Currency
 mywallets.amount=Amount
 currency.pairs=Currency Pairs
+currency.allpairs=All Pairs
 currency.pair=Pair
 currency.rate=Current rate
 dashboard.onlinechat=ONLINE CHAT
