--- a/Controller/src/main/resources/messages_ru.properties
+++ b/Controller/src/main/resources/messages_ru.properties
@@ -521,6 +521,7 @@ dashboard.qr=Вход через QR код
 mywallets.currency=Валюта
 mywallets.amount=Количество
 currency.pairs=Валютные пары
+currency.allpairs=Все Пары
 currency.pair=Пара
 currency.rate=Текущий курс
 dashboard.onlinechat=ОНЛАЙН ЧАТ
@@ -580,7 +581,7 @@ transactionsourcetype.ORDER=ОРДЕР
 transactionsourcetype.MERCHANT=ВВОД/ВЫВОД
 transactionsourcetype.REFERRAL=РЕФЕРРАЛ
 transactionsourcetype.ACCRUAL=НАЧИСЛЕНИЕ
-mystatement.title=Account statement
+mystatement.title=Выписка по счету
 mystatement.activebefore=Нач.актив
 mystatement.reservedbefore=Нач.резерв
 mystatement.activeafter=Кон.актив
