--- a/Controller/src/main/resources/messages_th.properties
+++ b/Controller/src/main/resources/messages_th.properties
@@ -506,6 +506,7 @@ dashboard.sellOrders = sell orders:
 merchants.depositNotification.body = Please pay {0} on the wallet {1}
 dashboard.personalArea = personal area
 currency.pairs = Currency Pairs
+currency.allpairs=All Pairs
 order.lockerror = The selected list the orders may not be grabbed for acceptance
 emailsubmitChangePassword.subject = Confirm exrates.me password change
 news.errorload = Error while the file loading
