--- a/Controller/src/main/resources/messages_ru.properties
+++ b/Controller/src/main/resources/messages_ru.properties
@@ -191,6 +191,8 @@ merchants.pendingEnrollment=Зачисление средств приозойд
 #not translated
 merchants.depositNotification.body = Пожалуйста, оплатите {0} на кошелек {1}
 #not translated
+merchants.depositNotificationWithCurrency.body = Пожалуйста, оплатите {0} {1} на расчетный счет {2}
+#not translated
 merchants.depositNotificationWithFee = Пожалуйста, оплатите %1s на кошелек %1s (Включая комиссию EDR Coin)
 #not translated
 merchants.depositNotification.header = Exrates Уведомление об оплате
@@ -331,6 +333,9 @@ transaction.walletId=Номер кошелька
 transaction.yandexmoney=Яндекс.Деньги
 #not tranlsated
 transaction.status=Статус
+transaction.titleInvoice=Инвойсы для подтверждения
+transaction.сonfirmation=Подтверждение
+transaction.accept=подтвердить
 #not tranlsated
 transaction.provided=Подтверждено
 #not tranlsated
