--- a/Controller/src/main/resources/messages_en.properties
+++ b/Controller/src/main/resources/messages_en.properties
@@ -185,7 +185,8 @@ merchants.submitPayment=confirm payment
 merchants.successfulBalanceDeposit=You have successfully deposited {0}. Commission {1}%, funds transferred to your wallet: {2}
 merchants.successfulBalanceWithdraw=you have successfully withdrawn in the amount: {0}
 merchants.successfulMoneyInput=Thank you. money was input in your wallet.
-merchants.depositNotification.body = Please pay {0} on the wallet {1}
+merchants.depositNotification.body = Please pay {0} on the checking account {1}
+merchants.depositNotificationWithCurrency.body = Please pay {0} {1} on the wallet {2}
 merchants.depositNotification.header = Exrates payment notification
 merchants.depositNotificationWithFee = Please pay %1s on the wallet %1s (Including EDR Coin commission)
 merchants.sum=Sum
@@ -294,6 +295,9 @@ transaction.operationTypeREFERRAL=Referral system
 transaction.referralLevel = Level (percent)
 transactions.referralTransactionTitle = Referral payments
 transaction.status=Status
+transaction.titleInvoice=Invoices for confirmation
+transaction.сonfirmation=Сonfirmation
+transaction.accept=accept
 transaction.provided=Confirmed
 transaction.notProvided=Waiting for confirmation
 transaction.confirmations=Waiting for confirmations: {0}/{1}
