TESTING-96, TESTING-109, TESTING-119

--- a/Controller/src/main/resources/messages_cn.properties
+++ b/Controller/src/main/resources/messages_cn.properties
@@ -583,3 +583,4 @@ orderinfo.currencypair=Currency Pair
 orderinfo.ok=Ok
 admin.changePasswordTitle=Changing the passwords
 currency.search=Search
+session.expire=The session has expired. You need to log in again.
