--- a/Controller/src/main/resources/messages_ru.properties
+++ b/Controller/src/main/resources/messages_ru.properties
@@ -597,3 +597,4 @@ orderinfo.ok=Ok
 admin.changePasswordTitle=Смена паролей
 login.email=Email
 currency.search=Поиск
+session.expire=Время сессии истекло. Необходимо авторизоваться повторно.
