--- a/Controller/src/main/resources/messages_th.properties
+++ b/Controller/src/main/resources/messages_th.properties
@@ -587,3 +587,4 @@ orderinfo.currencypair=Currency Pair
 orderinfo.ok=Ok
 admin.changePasswordTitle=Changing the passwords
 currency.search=Search
+session.expire=The session has expired. You need to log in again.
