fixed several bugs

--- a/Controller/src/main/resources/messages_en.properties
+++ b/Controller/src/main/resources/messages_en.properties
@@ -186,7 +186,7 @@ merchants.successfulBalanceDeposit=You have successfully deposited {0}. Commissi
 merchants.successfulBalanceWithdraw=you have successfully withdrawn in the amount: {0}
 merchants.successfulMoneyInput=Thank you. money was input in your wallet.
 merchants.depositNotification.body = Please pay {0} on the checking account {1}
-merchants.depositNotificationWithCurrency.body = Please pay {0} {1} on the wallet {2}
+merchants.depositNotificationWithCurrency.body = Please pay {0} on the wallet {1}
 merchants.depositNotification.header = Exrates payment notification
 merchants.depositNotificationWithFee = Please pay %1s on the wallet %1s (Including EDR Coin commission)
 merchants.sum=Sum
