--- a/Controller/src/main/resources/messages_ru.properties
+++ b/Controller/src/main/resources/messages_ru.properties
@@ -191,7 +191,7 @@ merchants.pendingEnrollment=Зачисление средств приозойд
 #not translated
 merchants.depositNotification.body = Пожалуйста, оплатите {0} на кошелек {1}
 #not translated
-merchants.depositNotificationWithCurrency.body = Пожалуйста, оплатите {0} {1} на расчетный счет {2}
+merchants.depositNotificationWithCurrency.body = Пожалуйста, оплатите {0} на расчетный счет {1}
 #not translated
 merchants.depositNotificationWithFee = Пожалуйста, оплатите %1s на кошелек %1s (Включая комиссию EDR Coin)
 #not translated
