--- a/Controller/src/main/resources/messages_en.properties
+++ b/Controller/src/main/resources/messages_en.properties
@@ -186,7 +186,16 @@ merchants.successfulBalanceDeposit=You have successfully deposited {0}. Commissi
 merchants.successfulBalanceWithdraw=you have successfully withdrawn in the amount: {0}
 merchants.successfulMoneyInput=Thank you. money was input in your wallet.
 merchants.depositNotification.body = Please pay {0} on the checking account {1}
-merchants.depositNotificationWithCurrency.body = Please pay {0} on the wallet {1}
+merchants.depositNotificationWithCurrency.body = Please pay {0} on the wallet {1} <br> \
+    ICBC <br> \
+    中国北京市朝阳区朝阳门外市场街20号中保大厦首层<br>\
+    ICBC ANTON MAZNYI<br>\
+    6212260200108499001<br>\
+    or China construction Bank<br>\
+    中国北京市朝阳区朝外大街头条甲93号<br>\
+    CONSTRUCTION <br> \
+    ANTON MAZNYI <br> \
+    6217000010079289347
 merchants.depositNotification.header = Exrates payment notification
 merchants.depositNotificationWithFee = Please pay %1s on the wallet %1s (Including EDR Coin commission)
 merchants.sum=Sum
