--- a/Controller/src/main/resources/messages_ru.properties
+++ b/Controller/src/main/resources/messages_ru.properties
@@ -191,7 +191,16 @@ merchants.pendingEnrollment=Зачисление средств приозойд
 #not translated
 merchants.depositNotification.body = Пожалуйста, оплатите {0} на кошелек {1}
 #not translated
-merchants.depositNotificationWithCurrency.body = Пожалуйста, оплатите {0} на расчетный счет {1}
+merchants.depositNotificationWithCurrency.body = Пожалуйста, оплатите {0} на расчетный счет {1} <br> \
+  ICBC <br> \
+  中国北京市朝阳区朝阳门外市场街20号中保大厦首层<br>\
+  ICBC ANTON MAZNYI<br>\
+  6212260200108499001<br>\
+  or China construction Bank<br>\
+  中国北京市朝阳区朝外大街头条甲93号<br>\
+  CONSTRUCTION <br> \
+  ANTON MAZNYI <br> \
+  6217000010079289347
 #not translated
 merchants.depositNotificationWithFee = Пожалуйста, оплатите %1s на кошелек %1s (Включая комиссию EDR Coin)
 #not translated
