--- a/Controller/src/main/resources/messages_cn.properties
+++ b/Controller/src/main/resources/messages_cn.properties
@@ -408,7 +408,7 @@ emailsubmitChangeFinPassword.subject =确认密码变更exrates.me金融
 dashboard.sellOrders = 销售订单：
 merchants.depositNotification.body =请支付{0}{1}钱包
 #not translated
-merchants.depositNotificationWithCurrency.body = Please pay {0} on the wallet {1} <br> \
+merchants.depositNotificationWithCurrency.body = 請付人民幣 {0} 在錢包 {1} <br> \
     ICBC <br> \
     中国北京市朝阳区朝阳门外市场街20号中保大厦首层<br>\
     ICBC ANTON MAZNYI<br>\
