added input/output history table

--- a/Controller/src/main/resources/messages_en.properties
+++ b/Controller/src/main/resources/messages_en.properties
@@ -546,3 +546,11 @@ orderinfo.ok=Ok
 admin.changePasswordTitle=Changing the passwords
 currency.search=Search
 session.expire=The session has expired. You need to log in again.
+inputoutput.datetime=Date
+inputoutput.currency=Currency
+inputoutput.amount=Amount
+inputoutput.commissionAmount=Fee amount
+inputoutput.merchant=Payment system
+inputoutput.operationtype=Type
+inputoutput.order=Order ID
+inputoutput.status=Status
