--- a/Controller/src/main/resources/messages_ru.properties
+++ b/Controller/src/main/resources/messages_ru.properties
@@ -612,3 +612,11 @@ admin.changePasswordTitle=Смена паролей
 login.email=Email
 currency.search=Поиск
 session.expire=Время сессии истекло. Необходимо авторизоваться повторно.
+inputoutput.datetime=Дата транзакции
+inputoutput.currency=Валюта
+inputoutput.amount=Сумма
+inputoutput.commissionAmount=Сумма комиссии
+inputoutput.merchant=Платежная система
+inputoutput.operationtype=Тип
+inputoutput.order=Ордер ID
+inputoutput.status=Статус
