--- a/Controller/src/main/resources/messages_cn.properties
+++ b/Controller/src/main/resources/messages_cn.properties
@@ -587,3 +587,11 @@ transactions.referralTransactionTitle =  推荐金
 news.deletenews = 删除信息
 admin.referralPercent = 百分比
 order.cannotcancel = 无法删除订单
+inputoutput.datetime = 交易日期
+inputoutput.currency=货币
+inputoutput.amount = 数目
+inputoutput.commissionAmount=佣金款额
+inputoutput.merchant=付款系统
+inputoutput.operationtype = 类型
+inputoutput.order =单据 ID
+inputoutput.status =状态
