--- a/Controller/src/main/resources/messages_en.properties
+++ b/Controller/src/main/resources/messages_en.properties
@@ -313,6 +313,10 @@ transaction.confirmations=Waiting for confirmations: {0}/{1}
 merchants.warn=Please pay attention to the amount of money you inputting. It must exactly match the amount that is listed above
 transactions.absent=the history of transactions is absent
 transactions.title=history of transactions
+transaction.user=User
+transaction.acceptanceDatetime=Acceptance date
+transaction.acceptanceUser=Acceptance user
+
 usermenu.history=history of transactions
 usermenu.inputCredits=input credits
 usermenu.orders=Orders
