--- a/Controller/src/main/resources/messages_ru.properties
+++ b/Controller/src/main/resources/messages_ru.properties
@@ -321,12 +321,13 @@ subusermenu.faq=FAQ
 subusermenu.news=Новости
 subusermenu.rules=Правила
 transaction.amount=Сумма
+transaction.user=Пользователь
 transaction.amountBuy=Сумма покупки
 transaction.commission=Комиссия(%)
 transaction.commissionAmount=Сумма комиссии
 transaction.currency=Валюта
 transaction.currencyBuy=Валюта покупки
-transaction.datetime=Дата
+transaction.datetime=Дата создания заявки
 transaction.exrates=exrates.me
 transaction.id=Id транзакции
 transaction.merchant=Платежная система
@@ -335,6 +336,8 @@ transaction.operationTypeAcceptOrder=Принятие ордера
 transaction.operationTypeCreateOrder=Создание ордера
 transaction.operationTypeINPUT=Ввод средств
 transaction.operationTypeOUTPUT=Вывод средств
+transaction.acceptanceDatetime=Дата обработки заявки
+transaction.acceptanceUser=Пользователь, обработавший заявку
 #not Translated
 transaction.operationTypeREFERRAL=Реферальная система
 transaction.perfectmoney=Perfect.Money
