transaction invoice table - add columns and apply new design

--- a/Controller/src/main/resources/messages_cn.properties
+++ b/Controller/src/main/resources/messages_cn.properties
@@ -599,6 +599,13 @@ inputoutput.merchant=付款系统
 inputoutput.operationtype = 类型
 inputoutput.order =ID业务
 inputoutput.status =状态
+
+transaction.accept=acceptCN
+transaction.titleInvoice=Invoices for confirmationCN
+transaction.user=UserCN
+transaction.acceptanceDatetime=Acceptance dateCN
+transaction.acceptanceUser=Acceptance userCN
+transaction.сonfirmation=СonfirmationCN
 inputoutput.statusTrue=完成
 inputoutput.statusFalse=有待
 
