change order deletion form; fix bugs

--- a/Controller/src/main/resources/messages_en.properties
+++ b/Controller/src/main/resources/messages_en.properties
@@ -434,6 +434,7 @@ ordersearch.datelaceholder=yyyy-mm-dd
 ordersearch.errornumber=Format: digits, point
 ordersearch.errordatetime=Format: yyyy-mm-dd HH:mm:ss
 ordersearch.errordate=Format: yyyy-mm-dd
+ordersearch.erroremail=Format: user@user.com
 orders.getordererror= Order not found with ID {0}
 orders.acceptsaveerror=Error while saving order
 transaction.providerror=Failed to provide transaction
