--- a/Controller/src/main/resources/messages_ru.properties
+++ b/Controller/src/main/resources/messages_ru.properties
@@ -497,6 +497,7 @@ ordersearch.datelaceholder=гггг-мм-дд
 ordersearch.errornumber=Формат: цифры, точка
 ordersearch.errordatetime=Формат: гггг-мм-дд ЧЧ:мм:сс
 ordersearch.errordate=Формат: гггг-мм-дд
+ordersearch.erroremail=Формат: user@user.com
 orders.getordererror= Не найден ордер с ID {0}
 orders.acceptsaveerror=Ошибка при сохранении ордера
 transaction.providerror=Ошибка при создании транзакции
